--- a/Project/Experimentation.ipynb
+++ b/Project/Experimentation.ipynb
@@ -3,23 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
-   "source": [
-    "from experiment import run_experiment"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -28,79 +11,34 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO - ISMI - Running command 'run'\n",
-      "INFO - ISMI - Started run with ID \"180\"\n"
+      "Using TensorFlow backend.\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[!] Loading data\n",
-      "[!] Creating validation_generator\n",
-      "[!] Creating train_generator\n",
-      "[!] Creating test_generator\n",
-      "[!] Building model\n",
-      "WARNING:tensorflow:From /scratch/tdeboer/ismi/Project/models/capsulelayers.py:144: calling softmax (from tensorflow.python.ops.nn_ops) with dim is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "dim is deprecated, use axis instead\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name '_obtain_input_shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-8f877ecd044d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mexperiment\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrun_experiment\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m config = {'model': 'recnn',\n\u001b[1;32m      3\u001b[0m                \u001b[0;34m'use_augment'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                \u001b[0;34m'epochs'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                \u001b[0;34m'batch_size'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/scratch/tdeboer/ismi/Project/experiment.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcapsnet\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbuild_capsnet\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconvnet_reg\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbuild_convnet_reg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecnn\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbuild_recnn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgenerators\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maugment\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0maugmentor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/scratch/tdeboer/ismi/Project/models/recnn.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras_gcnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapplications\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdensenetnew\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mGDenseNet\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbackend\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m## TODO parameterize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Parameters for the DenseNet model builder\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/scratch/tdeboer/ismi/Project/src/keras-gcnn/keras_gcnn/applications/densenetnew.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackend\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapplications\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimagenet_utils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0m_obtain_input_shape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapplications\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimagenet_utils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpreprocess_input\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0m_preprocess_input\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtopology\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_source_inputs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name '_obtain_input_shape'"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING - tensorflow - From /scratch/tdeboer/ismi/Project/models/capsulelayers.py:144: calling softmax (from tensorflow.python.ops.nn_ops) with dim is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "dim is deprecated, use axis instead\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[!] Training model\n",
-      "Epoch 1/2\n",
-      "7/7 [==============================] - 17s 2s/step - loss: 6.6390 - capsnet_loss: 5.9462 - decoder_loss: 0.6928 - capsnet_acc: 0.5155 - decoder_acc: 0.0246 - val_loss: 7.2505 - val_capsnet_loss: 6.5587 - val_decoder_loss: 0.6918 - val_capsnet_acc: 0.5500 - val_decoder_acc: 0.0228\n",
-      "True\n",
-      "\n",
-      "Epoch 00001: val_loss improved from inf to 7.25046, saving model to checkpoints/model-1558446399.1512394.hdf5\n",
-      "Epoch 2/2\n",
-      "7/7 [==============================] - 11s 2s/step - loss: 6.8485 - capsnet_loss: 6.1590 - decoder_loss: 0.6895 - capsnet_acc: 0.5661 - decoder_acc: 0.0297 - val_loss: 6.0656 - val_capsnet_loss: 5.3809 - val_decoder_loss: 0.6846 - val_capsnet_acc: 0.5500 - val_decoder_acc: 0.0235\n",
-      "True\n",
-      "\n",
-      "Epoch 00002: val_loss improved from 7.25046 to 6.06556, saving model to checkpoints/model-1558446399.1512394.hdf5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO - ISMI - Completed after 0:00:40\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<sacred.run.Run at 0x2b484ccea940>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "config = {'model': 'capsnet',\n",
-    "               'use_augment': True,\n",
-    "               'model_params': {'weights': None},\n",
-    "               'epochs': 2,\n",
-    "               'use_capsnet': True,\n",
+    "from experiment import run_experiment\n",
+    "config = {'model': 'recnn',\n",
+    "               'use_augment': False,           \n",
+    "               'epochs': 10,\n",
     "               'batch_size': 32,\n",
     "               'target_size':(96,96),\n",
-    "               'only_use_subset':True}\n",
+    "               'only_use_subset':False}\n",
     "\n",
-    "run_experiment(config, predict_test=False)"
+    "run_experiment(config, predict_test=\"recnn_no_augmentation\")"
    ]
   },
   {
