cannot reproduce our own results :/

--- a/Project/Experimentation.ipynb
+++ b/Project/Experimentation.ipynb
@@ -2,34 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    },
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name '_obtain_input_shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-8f877ecd044d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mexperiment\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrun_experiment\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m config = {'model': 'recnn',\n\u001b[1;32m      3\u001b[0m                \u001b[0;34m'use_augment'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                \u001b[0;34m'epochs'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                \u001b[0;34m'batch_size'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/scratch/tdeboer/ismi/Project/experiment.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcapsnet\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbuild_capsnet\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconvnet_reg\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbuild_convnet_reg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecnn\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbuild_recnn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgenerators\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maugment\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0maugmentor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/scratch/tdeboer/ismi/Project/models/recnn.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras_gcnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapplications\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdensenetnew\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mGDenseNet\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbackend\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m## TODO parameterize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Parameters for the DenseNet model builder\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/scratch/tdeboer/ismi/Project/src/keras-gcnn/keras_gcnn/applications/densenetnew.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackend\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapplications\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimagenet_utils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0m_obtain_input_shape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapplications\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimagenet_utils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpreprocess_input\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0m_preprocess_input\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtopology\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_source_inputs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name '_obtain_input_shape'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "'''\n",
     "from experiment import run_experiment\n",
     "config = {'model': 'recnn',\n",
     "               'use_augment': False,           \n",
@@ -38,15 +17,176 @@
     "               'target_size':(96,96),\n",
     "               'only_use_subset':False}\n",
     "\n",
-    "run_experiment(config, predict_test=\"recnn_no_augmentation\")"
+    "run_experiment(config, predict_test=\"recnn_no_augmentation\")\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n",
+      "INFO - ISMI - Running command 'run'\n",
+      "INFO - ISMI - Started run with ID \"278\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[!] Loading data\n",
+      "[!] Creating validation_generator\n",
+      "[!] Creating train_generator\n",
+      "[!] Creating test_generator\n",
+      "[!] Building model\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input_1 (InputLayer)         (None, 96, 96, 3)         0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_1 (Conv2D)            (None, 94, 94, 32)        896       \n",
+      "_________________________________________________________________\n",
+      "conv2d_2 (Conv2D)            (None, 46, 46, 64)        18496     \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_1 (Batch (None, 46, 46, 64)        256       \n",
+      "_________________________________________________________________\n",
+      "leaky_re_lu_1 (LeakyReLU)    (None, 46, 46, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_3 (Conv2D)            (None, 44, 44, 64)        36928     \n",
+      "_________________________________________________________________\n",
+      "conv2d_4 (Conv2D)            (None, 21, 21, 128)       73856     \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_2 (Batch (None, 21, 21, 128)       512       \n",
+      "_________________________________________________________________\n",
+      "leaky_re_lu_2 (LeakyReLU)    (None, 21, 21, 128)       0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_5 (Conv2D)            (None, 19, 19, 128)       147584    \n",
+      "_________________________________________________________________\n",
+      "conv2d_6 (Conv2D)            (None, 9, 9, 256)         295168    \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_3 (Batch (None, 9, 9, 256)         1024      \n",
+      "_________________________________________________________________\n",
+      "leaky_re_lu_3 (LeakyReLU)    (None, 9, 9, 256)         0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_7 (Conv2D)            (None, 7, 7, 256)         590080    \n",
+      "_________________________________________________________________\n",
+      "conv2d_8 (Conv2D)            (None, 3, 3, 512)         1180160   \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_4 (Batch (None, 3, 3, 512)         2048      \n",
+      "_________________________________________________________________\n",
+      "leaky_re_lu_4 (LeakyReLU)    (None, 3, 3, 512)         0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_9 (Conv2D)            (None, 1, 1, 512)         2359808   \n",
+      "_________________________________________________________________\n",
+      "global_average_pooling2d_1 ( (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dropout_1 (Dropout)          (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 512)               262656    \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 1)                 513       \n",
+      "=================================================================\n",
+      "Total params: 4,969,985\n",
+      "Trainable params: 4,968,065\n",
+      "Non-trainable params: 1,920\n",
+      "_________________________________________________________________\n",
+      "[!] Training model\n",
+      "Epoch 1/10\n",
+      "7/7 [==============================] - 3s 395ms/step - loss: 6.1567 - acc: 0.5525 - val_loss: 7.1741 - val_acc: 0.5500\n",
+      "\n",
+      "Epoch 00001: val_loss improved from inf to 7.17407, saving model to checkpoints/model-1559653257.2781215.hdf5\n",
+      "Epoch 2/10\n",
+      "7/7 [==============================] - 0s 49ms/step - loss: 6.3570 - acc: 0.6013 - val_loss: 7.1741 - val_acc: 0.5500\n",
+      "\n",
+      "Epoch 00002: val_loss did not improve from 7.17407\n",
+      "Epoch 3/10\n",
+      "7/7 [==============================] - 0s 45ms/step - loss: 7.1043 - acc: 0.5544 - val_loss: 7.1741 - val_acc: 0.5500\n",
+      "\n",
+      "Epoch 00003: val_loss did not improve from 7.17407\n",
+      "Epoch 4/10\n",
+      "7/7 [==============================] - 0s 43ms/step - loss: 6.9175 - acc: 0.5661 - val_loss: 7.1741 - val_acc: 0.5500\n",
+      "\n",
+      "Epoch 00004: val_loss did not improve from 7.17407\n",
+      "Epoch 5/10\n",
+      "7/7 [==============================] - 0s 43ms/step - loss: 7.6648 - acc: 0.5192 - val_loss: 7.1741 - val_acc: 0.5500\n",
+      "\n",
+      "Epoch 00005: val_loss did not improve from 7.17407\n",
+      "Epoch 6/10\n",
+      "7/7 [==============================] - 0s 44ms/step - loss: 7.1043 - acc: 0.5544 - val_loss: 7.1741 - val_acc: 0.5500\n",
+      "\n",
+      "Epoch 00006: val_loss did not improve from 7.17407\n",
+      "Epoch 7/10\n",
+      "7/7 [==============================] - 0s 43ms/step - loss: 6.5439 - acc: 0.5895 - val_loss: 7.1741 - val_acc: 0.5500\n",
+      "\n",
+      "Epoch 00007: val_loss did not improve from 7.17407\n",
+      "Epoch 8/10\n",
+      "7/7 [==============================] - 0s 43ms/step - loss: 7.1043 - acc: 0.5544 - val_loss: 7.1741 - val_acc: 0.5500\n",
+      "\n",
+      "Epoch 00008: val_loss did not improve from 7.17407\n",
+      "Epoch 9/10\n",
+      "7/7 [==============================] - 0s 46ms/step - loss: 7.6648 - acc: 0.5192 - val_loss: 7.1741 - val_acc: 0.5500\n",
+      "\n",
+      "Epoch 00009: val_loss did not improve from 7.17407\n",
+      "Epoch 10/10\n",
+      "7/7 [==============================] - 0s 44ms/step - loss: 7.1043 - acc: 0.5544 - val_loss: 7.1741 - val_acc: 0.5500\n",
+      "\n",
+      "Epoch 00010: val_loss did not improve from 7.17407\n",
+      "[!] Predicting validation set\n",
+      "7/7 [==============================] - 0s 39ms/step\n",
+      "[!] Predicting test set\n",
+      "4/4 [==============================] - 0s 26ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Prediction saved to file: <a target=\"_blank\" href=\"./predictions/test_custom_convnet_no_augmentation.csv\">data/custom_convnet_no_augmentation.csv</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO - ISMI - Completed after 0:00:22\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<sacred.run.Run at 0x2b3cb3212f60>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from experiment import run_experiment\n",
+    "config = {'model': 'convnet',\n",
+    "               'use_augment': False,           \n",
+    "               'epochs': 10,\n",
+    "               'batch_size': 32,\n",
+    "               'target_size':(96,96),\n",
+    "               'reduce_lr_on_plateau': True,\n",
+    "               'lr':0.01,\n",
+    "               'only_use_subset':True}\n",
+    "\n",
+    "run_experiment(config, predict_test=\"custom_convnet_no_augmentation\", predict_val=\"custom_convnet_no_augmentation\")"
+   ]
   }
  ],
  "metadata": {
